--- a/.htaccess
+++ b/.htaccess
@@ -2,10 +2,7 @@
 RewriteRule ^(.*)index.html$ /$1 [R=301,L]
 
 
-RewriteRule ^(.*)$ /www
-RewriteRule ^(.*)$ www/$1
-RewriteRule ^$ www/
-RedirectMatch 301 ^/(.*)$ /www
+#RewriteRule ^(.*)$ /www
 
 
 RewriteEngine on
@@ -18,3 +15,4 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [NC,L]
+
