--- a/.htaccess
+++ b/.htaccess
@@ -2,7 +2,11 @@
 RewriteRule ^(.*)index.html$ /$1 [R=301,L]
 
 
-#RewriteRule ^(.*)$ /www
+RewriteEngine On
+
+# Redirect /www ke root domain
+RewriteCond %{REQUEST_URI} ^/www/?$ [NC]
+RewriteRule ^.*$ https://www.ku.com/ [L,R=301]
 
 
 RewriteEngine on
@@ -15,4 +19,5 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [NC,L]
+
 
