--- a/.htaccess
+++ b/.htaccess
@@ -6,7 +6,7 @@ RewriteEngine On
 
 # Redirect /www ke root domain
 RewriteCond %{REQUEST_URI} ^/www/?$ [NC]
-RewriteRule ^.*$ https://www.ku.com/ [L,R=301]
+RewriteRule ^.*$ https://www.nexthighestlevel.com/ [L,R=301]
 
 
 RewriteEngine on
@@ -19,5 +19,6 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [NC,L]
+
 
 
